<resources>
    <string name="app_name">Boreas</string>
    <string name="www_boreas_com">www.boreas.com</string>
    <string name="By_Boreas">By Boreas</string>
    <string name="done">DONE</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_name">Enter your name</string>

    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="development_under_process">Development under process</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
